--- a/Arcanum.UI/Components/Windows/DebugWindows/AgsWindow.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/AgsWindow.xaml
@@ -6,60 +6,23 @@
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
                          mc:Ignorable = "d"
                          Title = "AgsWindow"
-                         Height = "450"
-                         Width = "800"
+                         Height = "700"
+                         Width = "1500"
                          WindowStartupLocation = "CenterScreen">
     <Grid Margin = "2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width = "*" />
             <ColumnDefinition Width = "*" />
-            <ColumnDefinition Width = "3*" />
+            <ColumnDefinition Width = "*" />
+            <ColumnDefinition Width = "4*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height = "30" />
             <RowDefinition Height = "*" />
             <RowDefinition Height = "30" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column = "0"
-              Grid.ColumnSpan = "3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width = "*" />
-                <ColumnDefinition Width = "*" />
-                <ColumnDefinition Width = "*" />
-                <ColumnDefinition Width = "*" />
-            </Grid.ColumnDefinitions>
-
-
-            <styleClasses:CorneredTextBox Grid.Row = "0"
-                                          Grid.Column = "0"
-                                          x:Name = "CommentChar"
-                                          Margin = "2">
-                #
-            </styleClasses:CorneredTextBox>
-
-            <ComboBox Grid.Column = "1"
-                      x:Name = "SeperatorChar"
-                      ItemsSource = "{Binding SeparatorChars, RelativeSource={RelativeSource AncestorType=Window}}"
-                      Margin = "2">
-            </ComboBox>
-
-            <styleClasses:CorneredTextBox Grid.Row = "0"
-                                          Grid.Column = "2"
-                                          x:Name = "OpeningChar"
-                                          Margin = "2">
-            </styleClasses:CorneredTextBox>
-
-            <styleClasses:CorneredTextBox Grid.Row = "0"
-                                          Grid.Column = "3"
-                                          x:Name = "ClosingChar"
-                                          Margin = "2">
-            </styleClasses:CorneredTextBox>
-
-        </Grid>
-
         <ListView Grid.Column = "0"
-                  Grid.Row = "1"
+                  Grid.Row = "0"
                   x:Name = "AgsTypesView"
                   ItemsSource = "{Binding AgsTypes, RelativeSource={RelativeSource AncestorType=Window}}"
                   SelectionChanged = "AgsItemsView_SelectionChanged"
@@ -72,20 +35,36 @@
         </ListView>
 
         <ListView Grid.Column = "1"
-                  Grid.Row = "1"
+                  Grid.Row = "0"
                   x:Name = "AgsItemsView"
                   ItemsSource = "{Binding AgsItems, RelativeSource={RelativeSource AncestorType=Window}}"
                   SelectionChanged = "ObjectSelector_OnSelectionChanged"
                   Margin = "2">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text = "{Binding ClassMetadata}" />
+                    <TextBlock Text = "{Binding UniqueId}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <styleClasses:CorneredTextBox Grid.Column = "2"
-                                      Grid.Row = "1"
+
+        <ListView Grid.Column = "2"
+                  Grid.Row = "0"
+                  x:Name = "Eu5FileObj"
+                  ItemsSource = "{Binding FileObjs, RelativeSource={RelativeSource AncestorType=Window}}"
+                  SelectionChanged = "Eu5FileObjSelector_OnSelectionChanged"
+                  MouseDoubleClick = "Eu5FileObjSelector_OnMouseDown"
+                  Margin = "2">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text = "{Binding Path.Filename}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+
+        <styleClasses:CorneredTextBox Grid.Column = "3"
+                                      Grid.Row = "0"
                                       x:Name = "AgsSavingText"
                                       TextWrapping = "NoWrap"
                                       VerticalScrollBarVisibility = "Auto"
@@ -93,14 +72,45 @@
                                       IsReadOnly = "True"
                                       FontFamily = "Consolas"
                                       FontSize = "12"
-                                      Margin = "2" />
+                                      Margin = "2"
+                                      Text = "{Binding FormattedText, RelativeSource ={RelativeSource AncestorType=styleClasses:BaseWindow}}" />
 
-        <styleClasses:BaseButton Grid.Column = "2"
-                                 Grid.Row = "2"
-                                 Width = "100"
-                                 Click = "ExportButton_Click"
-                                 Margin = "2">
-            Export
-        </styleClasses:BaseButton>
+        <TextBlock Grid.Column = "0"
+                   Grid.Row = "1"
+                   HorizontalAlignment = "Left"
+                   VerticalAlignment = "Center"
+                   Text = "{Binding Complexity, RelativeSource={RelativeSource AncestorType=Window}}">
+        </TextBlock>
+
+        <TextBlock Grid.Column = "1"
+                   Grid.Row = "1"
+                   HorizontalAlignment = "Left"
+                   VerticalAlignment = "Center"
+                   Text = "{Binding SavingTime, RelativeSource={RelativeSource AncestorType=Window}, StringFormat='Saving time: {0} ms'}">
+        </TextBlock>
+
+        <StackPanel Orientation = "Horizontal"
+                    Grid.Column = "3"
+                    Grid.Row = "1"
+                    HorizontalAlignment = "Right">
+
+            <CheckBox x:Name = "AllowMultithreadedCheckBox"
+                      VerticalAlignment = "Center"
+                      Margin = "4, 0"
+                      IsChecked = "True">
+                Allow Multithreaded use
+            </CheckBox>
+
+            <styleClasses:BaseButton Width = "100"
+                                     Click = "CopyButton_Click"
+                                     Margin = "2">
+                Copy
+            </styleClasses:BaseButton>
+            <styleClasses:BaseButton Width = "100"
+                                     Click = "ExportButton_Click"
+                                     Margin = "2">
+                Export
+            </styleClasses:BaseButton>
+        </StackPanel>
     </Grid>
 </styleClasses:BaseWindow>
